# betting_mvp

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  GCP-DEPLOYMENT.md  LICENSE  Makefile  OPERATING_MANUAL.md  README.md  admin-access.html  alembic.ini  betting  cloudbuild.yaml  demo.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
adapters/: chain.py  ethereum.py  oracle.py
adapters/onchain/: interfaces.py  solana.py  solana_simple.py
api/: admin.py  auth.py  main.py  routes.py  schemas.py  wallet.py
auth/: jwt.py  models.py  service.py
cli/: auth.py  main.py
domain/: errors.py  models.py  monitoring.py  services.py
infra/: db.py  monitoring.py  redis.py  scheduler.py  settings.py  settings_prod.py
infra/migrations/: env.py
infra/migrations/versions/: a47e9dc8a2d0_initial_migration.py  (+1 more)
monitoring/: alert_rules.yml  prometheus.yml
onramp/: deposit_intents.py  models.py  monitor.py  qr.py  withdrawal.py
scripts/: deploy.sh  start-prod.sh
static/: admin.css
templates/: dashboard.html  index.html  login.html  signup.html
templates/admin/: api_keys.html  base.html  dashboard.html  login.html  rounds.html  system.html  transactions.html  user_detail.html  users.html
tests/: conftest.py  test_api_integration.py  test_auth.py  test_chain_integration.py  test_ledger.py  test_onchain_adapters.py  test_payouts.py  test_round_lifecycle.py
