[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betting-mvp"
version = "0.1.0"
description = "24h Up/Down betting service MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg[binary]>=3.1.13",
    "alembic>=1.12.1",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "apscheduler>=3.10.4",
    "redis>=5.0.1",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "freezegun>=1.2.2",
    "hypothesis>=6.92.1",
    "respx>=0.20.2",
    "httpx>=0.25.2",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.1",
]

[project.scripts]
betting-cli = "cli.main:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]